--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ docs/_build
 #==============================================================================#
 bindings/go/llvm/llvm_config.go
 bindings/go/llvm/workdir
+
+build/
